Add chart in quizWeb app and add functionality to show different results from users and admins page in quizserver app